@@ -49,8 +49,7 @@ public class DataDumpCommand {
         List<AbstractAugment> augments = spells.values().stream()
                 .filter(p -> p instanceof AbstractAugment)
                 .map(p -> (AbstractAugment) p)
-                .sorted(Comparator.comparing(a -> a.getId()))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(AbstractSpellPart::getId)).toList();
 
         // Collect the augment compatibilities
         List<Tuple<AbstractSpellPart, Set<AbstractAugment>>> augmentCompat = spells.values().stream()
@@ -62,8 +61,7 @@ public class DataDumpCommand {
         augmentCompat.addAll(spells.values().stream()
                 .filter(part -> part instanceof AbstractEffect)
                 .map(part -> new Tuple<>(part, part.compatibleAugments))
-                .sorted(Comparator.comparing(t -> t.getA().getId()))
-                .collect(Collectors.toList()));
+                .sorted(Comparator.comparing(t -> t.getA().getId())).toList());
 
         // Write the file
         File file = PATH_AUGMENT_COMPATIBILITY.toFile();
@@ -72,7 +70,7 @@ public class DataDumpCommand {
             PrintWriter w = new PrintWriter(new FileWriterWithEncoding(file, "UTF-8", false));
 
             // Header Line
-            w.println("glyph, " + augments.stream().map(a -> a.getId()).collect(Collectors.joining(", ")));
+            w.println("glyph, " + augments.stream().map(AbstractSpellPart::getId).collect(Collectors.joining(", ")));
 
             // Rows
             for (Tuple<AbstractSpellPart, Set<AbstractAugment>> row : augmentCompat) {
